test/bad/21_0_spectest_bad.fsf
type bad1 = Bad1 and bad1 = Bad2
